#1031: Refactored the Openrewrite implementation to fit standards and added more tests